2007-05-16  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-main.[ch]: Add clutter_base_init(), semi-private
	function to initialise just the base Clutter functionalities; it's
	only used by gtk-doc to introspect the classes.

	* clutter/clutter-feature.c: Do not access the private features
	data structure unless it has been initialised.

2007-05-16  Tomas Frydrych  <tf@openedhand.com>
	
	* clutter/clutter-alpha.h:
	* clutter/clutter-alpha.c:
	* doc/reference/clutter-sections.txt:
	Added clutter_sine_half().
	
2007-05-16  Tomas Frydrych  <tf@openedhand.com>
	
	* clutter/clutter-alpha.h:
	* clutter/clutter-alpha.c:
	* doc/reference/clutter-sections.txt:
	Fixed clutter_sine_inc(), added clutter_sine_dec().
	
2007-05-16  Tomas Frydrych  <tf@openedhand.com>
	
	* clutter/clutter-alpha.h:
	* clutter/clutter-alpha.c:
	* doc/reference/clutter-sections.txt:
	* doc/rererence/clutter.types:
	* doc/reference/tmpl/clutter-alpha.sgml:
	clutter_smoothstep_func alpha function, 
	ClutterSmoothstep struct for smoothstep function data.

2007-05-16  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-backend.c:
	* clutter/clutter-backend.h:
	* clutter/clutter-feature.c:
	* clutter/clutter-feature.h:
	* clutter/clutter-main.c:
	* clutter/clutter-main.h:
	* clutter/clutter-private.h:
	* clutter/clutter-stage.c:
	* clutter/cogl/cogl.h:
	* clutter/cogl/gl/cogl.c:
	* clutter/cogl/gles/cogl.c:
	* clutter/glx/clutter-backend-glx.c:
	* clutter/glx/clutter-backend-glx.h:
	* clutter/glx/clutter-glx.h:
	* clutter/glx/clutter-stage-glx.c:
	* clutter/glx/clutter-stage-glx.h:
	Rejig the features() foo, moving mostly into backends/cogl.

2007-05-15  Tomas Frydrych  <tf@openedhand.com>

	* clutter/clutter-actor.c:
	(clutter_actor_get_abs_position):
	Removed unnecessary CFX_MUL().

2007-05-15  Tomas Frydrych  <tf@openedhand.com>

	* clutter/clutter-behaviour-ellipse.h:
	* clutter/clutter-behaviour-ellipse.c:
	(clutter_behaviour_ellipse_new):
	Added a tilt parameter.
	